samples/_failures_safe/1761040227_ba8098_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a73f40c2.c: In function ‘main’:
./samples/SAFE/__tmp_a73f40c2.c:156:40: error: expected ‘)’ at end of input
  156 |         if (strlen(input) != 2 || input
      |            ~                           ^
      |                                        )
./samples/SAFE/__tmp_a73f40c2.c:156:9: error: expected declaration or statement at end of input
  156 |         if (strlen(input) != 2 || input
      |         ^~
./samples/SAFE/__tmp_a73f40c2.c:156:9: error: expected declaration or statement at end of input
